OracleDatabase/SingleInstance/extensions/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: debezium
  name: debezium
