OracleDatabase/SingleInstance/extensions/openshift/oracle-11g-dbz.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/route-disabled: "false"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"oracle11g:11.2.0.2-xe.debezium","namespace":"debezium"},"fieldPath":"spec.template.spec.containers[?(@.name==\"oracle11g\")].image","pause":"false"}]'
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: oracle11g
      app.kubernetes.io/component: oracle11g
      app.kubernetes.io/instance: oracle11g
      app.kubernetes.io/name: oracle11g
      app.kubernetes.io/part-of: data-source
      app.openshift.io/runtime-namespace: debezium
    name: oracle11g
    namespace: debezium
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: oracle11g
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: oracle11g
          deployment: oracle11g
      spec:
        containers:
        - env:
          - name: ORACLE_PWD
            value: mypass
          image: image-registry.openshift-image-registry.svc:5000/debezium/oracle11g@sha256:f9ba925bdd122f6970f62d626a75b3a261de0edf52cb2fc15ad953fa6072f93b
          imagePullPolicy: IfNotPresent
          name: oracle11g
          ports:
          - containerPort: 1521
            protocol: TCP
          resources:
            requests:
              memory: 1Gi
          securityContext:
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /u01/app/oracle/oradata
            name: oradata
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
          fsGroupChangePolicy: OnRootMismatch
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir:
            medium: Memory
          name: dshm
        - name: oradata
          persistentVolumeClaim:
            claimName: oradata-pvc
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: oracle11g
      app.kubernetes.io/component: oracle11g
      app.kubernetes.io/instance: oracle11g
      app.kubernetes.io/name: oracle11g
      app.kubernetes.io/part-of: data-source
      app.openshift.io/runtime-version: 11.2.0.2-xe.debezium
    name: oracle11g
    namespace: debezium
  spec:
    ports:
    - name: 1521-tcp
      port: 1521
      protocol: TCP
      targetPort: 1521
    selector:
      app: oracle11g
      deployment: oracle11g
    type: ClusterIP
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: oracle11g
      app.kubernetes.io/component: oracle11g
      app.kubernetes.io/instance: oracle11g
      app.kubernetes.io/name: oracle11g
      app.kubernetes.io/part-of: data-source
    name: oracle11g
    namespace: debezium
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/rhtevan/oracle/database:11.2.0.2-xe.debezium
      from:
        kind: DockerImage
        name: quay.io/rhtevan/oracle/database:11.2.0.2-xe.debezium
      importPolicy:
        importMode: Legacy
      name: 11.2.0.2-xe.debezium
      referencePolicy:
        type: Local
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: system:openshift:scc:privileged
    namespace: debezium
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: system:openshift:scc:privileged
  subjects:
  - kind: ServiceAccount
    name: default
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: oradata-pvc
    namespace: debezium
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 10Gi
    volumeMode: Filesystem
